[tool.black]
line-length = 88
# Target the Python versions you support. Adjust if your project uses a different version.
target-version = ['py310']
include = '\\.pyi?$'
exclude = '''
/(
  \.git
| \.venv
| build
| dist
| __pycache__
)/
'''

[tool.poetry]
name = "cryptography messenger"
version = "0.1.0"
description = ""
authors = ["Sean Blizard <emailseanblizard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cryptography = "^46.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
