[tool.black]
line-length = 88
# Target the Python versions you support. Adjust if your project uses a different version.
target-version = ['py310']
include = '\\.pyi?$'
exclude = '''
/(
  \.git
| \.venv
| build
| dist
| __pycache__
)/
'''

[tool.poetry]
name = "cryptography messenger"
version = "0.1.0"
description = ""
authors = ["Sean Blizard <emailseanblizard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cryptography = "^46.0.2"

[tool.poetry.group.dev.dependencies]
bandit = "^1.8.6"
safety = "^3.0.0"
pytest = "^8.0.0"
pytest-cov = "^4.0.0"
hypothesis = "^6.0.0"


[tool.mypy]
check_untyped_defs = false
disable_error_code = ["annotation-unchecked"]

[tool.bandit]
# Bandit configuration for security scanning
exclude_dirs = ["test_*", "__pycache__", ".git"]
tests = ["B201", "B301", "B302", "B303", "B304", "B305", "B306", "B307", "B308", "B309", "B310", "B311", "B312", "B313", "B314", "B315", "B316", "B317", "B318", "B319", "B320", "B321", "B322", "B323", "B324", "B325", "B501", "B502", "B503", "B504", "B505", "B506", "B507", "B601", "B602", "B603", "B604", "B605", "B606", "B607", "B608", "B609", "B610", "B611", "B701", "B702", "B703"]
skips = ["B101"]  # Skip assert_used test since we use asserts in tests

[tool.bandit.assert_used]
skips = ["*test*.py", "test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
